--- a/style.css
+++ b/style.css
@@ -112,3 +112,16 @@ footer {
   color: white;
   margin-top: 40px;
 }
+#contact a {
+  color: #007BFF;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#contact a:visited {
+  color: #007BFF;
+}
+
+#contact a:hover {
+  text-decoration: underline;
+}
